@@ -1,7 +1,0 @@
-package buildcraft.api.transport;
-
-import net.minecraftforge.common.ForgeDirection;
-
-public interface ISolidSideTile {
-	public boolean isSolidOnSide(ForgeDirection side);
-}
