@@ -5,7 +5,7 @@
   "description": "This is one of the three mods in the Gany's Mods collection. Gany's End adds blocks and functionalities related to the end (duh).
 Decorate your house with a better looking End Stone! or use Ender Pearls bricks!
 Use blocks to teleport other blocks! Make blocks disappear! Have an infinite bucket with all the water you'll need! Or behead your enemies using a scythe and gather their heads!",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "url": "",
   "updateUrl": "",
   "authorList": [
